Native text field elements shouldn't allow aria-owns children.

BUG=620432

Review-Url: https://codereview.chromium.org/2119893002
Cr-Commit-Position: refs/heads/master@{#403537}

Former-commit-id: 6647bd1dd8ba1f3f32e8e636f834270e5ee0edf3